(test
 (name json_codec)
 (modules json_codec)
 (libraries alcotest bindoj_test_common bindoj_codec bindoj_base kxclib yojson jsonm)
 (flags (:standard -open Kxclib))
 (preprocess (pps ppx_deriving.show)))

(test
 (name json_schema)
 (modules json_schema)
 (libraries alcotest bindoj_test_common bindoj_gen)
 (flags (:standard -open Kxclib))
 (preprocess (pps ppx_deriving.show)))

(test
 (name of_json_error)
 (modules of_json_error)
 (libraries
  alcotest
  bindoj_test_common
  bindoj_typedesc
  kxclib yojson jsonm)
 (flags (:standard -open Kxclib))
 (preprocess (pps ppx_deriving.show)))
