(rule
 (targets ex01_ts_gen.ts)
 (action (with-stdout-to %{targets} (run %{exe:gen/ex01_ts.exe})))
 (mode (promote (until-clean))))

(rule
 (targets ex02_ts_gen.ts)
 (action (with-stdout-to %{targets} (run %{exe:gen/ex02_ts.exe})))
 (mode (promote (until-clean))))

(rule
 (targets ex03_ts_gen.ts)
 (action (with-stdout-to %{targets} (run %{exe:gen/ex03_ts.exe})))
 (mode (promote (until-clean))))
